// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must be able to return all selected contentBlockNodes 1`] = `
Object {
  "key4": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key4",
    "nextSibling": "key5",
    "parent": null,
    "prevSibling": null,
    "text": "Alpha",
    "type": "unstyled",
  },
  "key5": Object {
    "characterList": Array [],
    "children": Array [
      "key6",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key5",
    "nextSibling": "key7",
    "parent": null,
    "prevSibling": "key4",
    "text": "",
    "type": "unstyled",
  },
  "key6": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key6",
    "nextSibling": null,
    "parent": "key5",
    "prevSibling": null,
    "text": "Charlie",
    "type": "unstyled",
  },
  "key7": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key7",
    "nextSibling": null,
    "parent": null,
    "prevSibling": "key5",
    "text": "Delta",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return all selected contentBlocks 1`] = `
Object {
  "key0": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key0",
    "text": "Alpha",
    "type": "unstyled",
  },
  "key1": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key1",
    "text": "Beta",
    "type": "unstyled",
  },
  "key2": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key2",
    "text": "Charlie",
    "type": "unstyled",
  },
  "key3": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key3",
    "text": "Delta",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return contentBlockNodes selected within 1`] = `
Object {
  "key10": Object {
    "characterList": Array [],
    "children": Array [
      "key11",
    ],
    "data": Object {},
    "depth": 0,
    "key": "key10",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "",
    "type": "unstyled",
  },
  "key11": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key11",
    "nextSibling": null,
    "parent": "key10",
    "prevSibling": null,
    "text": "Charlie",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return contentBlocks selected within 1`] = `
Object {
  "key8": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key8",
    "text": "Beta",
    "type": "unstyled",
  },
  "key9": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key9",
    "text": "Charlie",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return first ContentBlock selected 1`] = `
Object {
  "key12": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key12",
    "text": "Alpha",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return first ContentBlockNode selected 1`] = `
Object {
  "key13": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key13",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "Alpha",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return last ContentBlock selected 1`] = `
Object {
  "key14": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "data": Object {},
    "depth": 0,
    "key": "key14",
    "text": "Delta",
    "type": "unstyled",
  },
}
`;

exports[`must be able to return last ContentBlockNode selected 1`] = `
Object {
  "key15": Object {
    "characterList": Array [
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
      Object {
        "entity": null,
        "style": Array [],
      },
    ],
    "children": Array [],
    "data": Object {},
    "depth": 0,
    "key": "key15",
    "nextSibling": null,
    "parent": null,
    "prevSibling": null,
    "text": "Delta",
    "type": "unstyled",
  },
}
`;
